2008-12-17	The InnoDB Team

	* include/univ.i, include/buf0buf.h, include/hash0hash.h,
	include/ha0ha.h, include/ha0ha.ic, ha/ha0ha.c, ha/hash0hash.c,
	btr/btr0sea.c, buf/buf0lru.c, buf/buf0buf.c:
	Introduce the preprocessor symbol UNIV_AHI_DEBUG for enabling
	adaptive hash index debugging independently of UNIV_DEBUG.

2008-12-16	The InnoDB Team

	* btr/btr0cur.c:
	Do not update the free bits in the insert buffer bitmap when
	inserting or deleting from the insert buffer B-tree.  Assert that
	records in the insert buffer B-tree are never updated.

2008-12-12	The InnoDB Team

	* include/fil0fil.h, include/ibuf0ibuf.h, include/ibuf0types.h,
	include/ibuf0ibuf.ic, ibuf/ibuf0ibuf.c,
	buf/buf0buf.c, fil/fil0fil.c, fsp/fsp0fsp.c:
	Clean up the insert buffer subsystem so that only one insert
	buffer B-tree exists.

	Originally, there were provisions in InnoDB for multiple insert
	buffer B-trees, apparently one for each tablespace.

	When Heikki Tuuri implemented multiple InnoDB tablespaces in
	MySQL/InnoDB 4.1, he made the insert buffer live only in the
	system tablespace (space 0) but left the provisions in the code.

2008-12-11	The InnoDB Team

	* include/srv0srv.h, srv/srv0srv.c, os/os0proc.c:
	Fix the issue that the InnoDB plugin fails if
	innodb_buffer_pool_size is defined bigger than 4096M on 64-bit
	Windows.  This bug should not have affected other 64-bit systems.

2008-12-09	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#40386 Not flushing query cache after truncate.

	ha_statistics.records cannot be 0 unless the table is empty, set
	to 1 instead. The original problem of Bug#29507 has been fixed in
	the server.

2008-12-09	The InnoDB Team

	* handler/ha_innodb.cc, srv/srv0srv.c, trx/trx0trx.c:
	Fix Bug#40760 Getting database deadlocks on simultaneous inserts.

	The config param innodb_thread_concurrency is dynamically set and
	is read when a thread enters/exits innodb.  If the value is
	changed between the enter and exit time the behaviour becomes